# slackerbot

./: .dockerignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  index.yaml  reset.sh
.github/workflows/: docker.yml  release-docker.yml
charts/slackerbot/: Chart.yaml  values.yaml
charts/slackerbot/templates/: _helpers.tpl  configmap.yaml  database.yaml  db-init.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
entity/: Cargo.toml
entity/src/entities/: kv_store.rs  mod.rs  prelude.rs  quote.rs  role_button_server.rs
helm/: values.yaml
helm/templates/: configmap.yaml  database.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230329_110119_rolebuttons.rs  m20230607_114623_ccounter.rs  m20230614_120925_cquote_index.rs
src/: db_integrity.rs  handler.rs  lamia_tracker.rs  main.rs  quote.rs  util.rs
src/commands/: ccounter.rs  cquote.rs  delete.rs  kwquote.rs  lamia.rs  mia.rs  mod.rs  purge.rs  quote.rs  readycheck.rs  rquote.rs  tldr.rs  uquote.rs  voicequote.rs
src/commands/rolebuttons/: add.rs  button.rs  mod.rs  post.rs  remove.rs
src/ingest/: mod.rs  reaction.rs  voice.rs
src/util/: kvstore.rs  mod.rs
src/web/: auth.rs  image.rs  index.rs  mod.rs
web/static/css/: style.css
web/templates/: index.hbs  index.html
