[package]
name = "slackerbot"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
# Runtime
anyhow = "1.0"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Discord
serenity = { version = "0.11", default-features = false, features = ["builder", "client", "gateway", "http", "cache", "temp_cache", "model", "utils", "chrono", "tokio", "rustls_backend"] }
reqwest = { version = "0.11", default-features = false, features = ["gzip", "rustls-tls"] }
chrono = "0.4"

# Database
sea-orm = { version = "0.10", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
entity = { path = "./entity" }
migration = { path = "./migration" }

# Web
actix-web = "4.3"
actix-files = "0.6"
handlebars = { version = "4.3", features = ["dir_source"] }
serde = "1.0"
serde_json = "1.0"

# Web authentication
oauth2 = "4.3"
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"

[profile.release]
lto = true
