[package]
name = "slackerbot"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
# Runtime
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

# Discord
serenity = { version = "0.12", default-features = false, features = ["builder", "client", "gateway", "http", "cache", "temp_cache", "model", "utils", "chrono", "rustls_backend"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
chrono = "0.4"

# Database
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
entity = { path = "./entity" }
migration = { path = "./migration" }

# Web
actix-web = "4.9"
actix-files = "0.6"
handlebars = { version = "6", features = ["dir_source"] }
serde = "1.0"
serde_json = "1.0"

# Web authentication
oauth2 = "4.4"
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"

# TLDR command
chatgpt_rs = "1.2"
tiktoken-rs = { version = "0.6", features = ["async-openai"] }

# Util
rand = "0.8"
rs_utils = { git = "https://github.com/ikkerens/rs-utils"}

[profile.release]
lto = true
